# matrix_multiply_opencl

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: ci.yml
include/: matrix_multiply.h
kernels/: Readme.md
src/: matrix_multiply.cl  matrix_multiply.cpp
tests/: test_basic.cpp  test_opencl.cpp
